# CAGM

./: README.md  pyproject.toml
datasets/: tiny_net.txt
notebooks/: main.ipynb  tiny_net.ipynb
outputs/: ca_hepth_out.csv  karate_out.csv  tiny_net_out.csv
